kube/services/netpolicy/networkpolicy_shiny_templ.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-shiny
spec:
  podSelector:
    matchLabels:
      app: shiny
  ingress:
    - from:
      - podSelector:
          matchLabels:
             app: revproxy
      ports:
         - port: 3838
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: fence
  policyTypes:
    - Ingress
    - Egress
